# salrs

./: CMakeLists.txt  README.md
doc/: readme
src/: CMakeLists.txt  Makefile  api_kyber.h  check_salrs.c  check_salrs.h  cpucycles.h  fips202.c  generating.c  generating.h  hash.h  kyber_all.c  kyber_all.h  packing_salrs.c  packing_salrs.h  params_kyber.h  params_salrs.h  poly_calculations_salrs.c  poly_calculations_salrs.h  polyvec_salrs.h  readme  salrs_main.c  salrs_main.h  salrs_main_scheme.c  salrs_main_scheme.h
test/: CMakeLists.txt  Makefile  speed.c  test_salrs.c
test_scheme/: CMakeLists.txt  Makefile  test_salrs_scheme.c
